feat(infrastructure): set up CDKTF project with TypeScript and AWS provider
- Added infrastructure directory with CDKTF configuration files.
- Created .gitignore for Terraform and TypeScript files.
- Implemented initial stack in index.ts to define AWS provider and output.
- Configured TypeScript settings in tsconfig.json.
- Added Jest configuration for testing.
- Included help documentation for CDKTF commands.

3. Initialize CDKTF Project
- **Description**: Set up infrastructure as code foundation
- **Steps**:
  - In `infrastructure` directory, run `cdktf init --template=typescript --local`
  - Configure `.gitignore` for Terraform-specific files
  - Set up AWS provider with proper configuration
  - Create `cdktf.json` with proper stack configuration

--- a/.gitignore
+++ b/.gitignore
@@ -36,3 +36,14 @@ yarn-error.log*
 # Misc
 .DS_Store
 *.pem
+
+# Terraform specific
+.terraform/
+*.tfstate
+*.tfstate.backup
+*.tfstate.*.backup
+.terraform.lock.hcl
+terraform.tfvars
+.terraform.tfstate.lock.info
+cdktf.out/
+.gen/
