--- a/infrastructure/package.json
+++ b/infrastructure/package.json
@@ -1,22 +1,34 @@
 {
   "name": "infrastructure",
   "version": "0.1.0",
+  "main": "main.js",
+  "types": "main.ts",
+  "license": "MPL-2.0",
   "private": true,
   "scripts": {
+    "get": "cdktf get",
     "build": "tsc",
     "synth": "cdktf synth",
-    "deploy": "cdktf deploy",
-    "lint": "eslint src --ext .ts",
-    "check-types": "tsc --noEmit"
+    "compile": "tsc --pretty",
+    "watch": "tsc -w",
+    "test": "jest",
+    "test:watch": "jest --watch",
+    "upgrade": "npm i cdktf@latest cdktf-cli@latest",
+    "upgrade:next": "npm i cdktf@next cdktf-cli@next"
   },
-  "devDependencies": {
-    "@types/node": "^20.11.19",
-    "typescript": "^5.3.3",
-    "eslint": "^8.56.0"
+  "engines": {
+    "node": ">=18.0"
   },
   "dependencies": {
-    "cdktf": "^0.20.0",
-    "cdktf-cli": "^0.20.0",
-    "constructs": "^10.3.0"
+    "cdktf": "^0.20.11",
+    "constructs": "^10.4.2"
+  },
+  "devDependencies": {
+    "@types/jest": "^29.5.14",
+    "@types/node": "^22.14.1",
+    "jest": "^29.7.0",
+    "ts-jest": "^29.3.2",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.8.3"
   }
 } 
