--- a/apps/fastify-api/package.json
+++ b/apps/fastify-api/package.json
@@ -7,7 +7,11 @@
     "build": "tsc",
     "start": "node dist/index.js",
     "lint": "eslint src --ext .ts",
-    "check-types": "tsc --noEmit"
+    "check-types": "tsc --noEmit",
+    "docker:build": "docker build -t fastify-api .",
+    "docker:run": "docker run -p 3000:3000 fastify-api",
+    "docker:compose:up": "docker-compose up",
+    "docker:compose:down": "docker-compose down"
   },
   "dependencies": {
     "@fastify/sensible": "^5.5.0",
