--- a/package.json
+++ b/package.json
@@ -6,7 +6,13 @@
     "dev": "turbo run dev",
     "lint": "turbo run lint",
     "format": "prettier --write \"**/*.{ts,tsx,md}\"",
-    "check-types": "turbo run check-types"
+    "check-types": "turbo run check-types",
+    "docker:build:api": "docker build -t fastify-api .",
+    "docker:run:api": "docker run -p 3000:3000 fastify-api",
+    "docker:compose:up": "docker-compose up",
+    "docker:compose:up:dev": "docker-compose up fastify-api-dev",
+    "docker:compose:up:prod": "docker-compose up fastify-api",
+    "docker:compose:down": "docker-compose down"
   },
   "devDependencies": {
     "prettier": "^3.5.3",
