feat(infrastructure): implement VPC and network resources for EKS
- Added VPC configuration with public and private subnets, internet gateway, and NAT gateways.
- Created security groups for the EKS cluster and worker nodes with appropriate ingress and egress rules.
- Implemented tagging for VPC and subnets to facilitate Kubernetes integration.
- Established IAM roles for the EKS cluster and node groups with necessary policies attached.
- Introduced Terraform modules for network and ECR repository management, including lifecycle policies for image retention.

This commit lays the groundwork for deploying the EKS cluster and associated resources as outlined in the refined implementation plan.

--- a/infrastructure/package.json
+++ b/infrastructure/package.json
@@ -20,6 +20,7 @@
     "node": ">=18.0"
   },
   "dependencies": {
+    "@cdktf/provider-aws": "^19.60.1",
     "cdktf": "^0.20.11",
     "constructs": "^10.4.2"
   },
@@ -31,4 +32,4 @@
     "ts-node": "^10.9.2",
     "typescript": "^5.8.3"
   }
-} 
+}
