--- a/kubernetes/manifests/service.yaml
+++ b/kubernetes/manifests/service.yaml
@@ -5,8 +5,11 @@ metadata:
   namespace: fastify-api
   labels:
     app: fastify-api
+  annotations:
+    service.beta.kubernetes.io/aws-load-balancer-type: "nlb"
+    service.beta.kubernetes.io/aws-load-balancer-scheme: "internet-facing"
 spec:
-  type: ClusterIP
+  type: LoadBalancer
   ports:
   - port: 80
     targetPort: 3000
